# server/src/main/java/org/openapitools/api/PersonsApi.java
@@ -6,14 +6,11 @@
 package org.openapitools.api;
 
 import org.openapitools.model.Person;
-import org.openapitools.model.PersonsInner;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.Parameters;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -21,45 +18,42 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.multipart.MultipartFile;
 
 import javax.validation.Valid;
-import javax.validation.constraints.*;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import javax.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-11-15T19:48:45.783+01:00[Europe/Berlin]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-11-17T22:03:11.989+01:00[Europe/Berlin]")
 @Validated
-@Tag(name = "person", description = "the person API")
-public interface PersonApi {
+@Tag(name = "persons", description = "the persons API")
+public interface PersonsApi {
 
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
     }
 
     /**
-     * GET /person
+     * GET /persons
      * Get a list of all Persons
      *
      * @return Success! (status code 200)
      */
     @Operation(
-        operationId = "personGet",
-        tags = { "person" },
+        operationId = "personsGet",
+        tags = { "persons" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Success!", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = PersonsInner.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Person.class))
             })
         }
     )
     @RequestMapping(
         method = RequestMethod.GET,
-        value = "/person",
+        value = "/persons",
         produces = { "application/json" }
     )
-    default ResponseEntity<List<PersonsInner>> personGet(
+    default ResponseEntity<List<Person>> personsGet(
         
     ) {
         getRequest().ifPresent(request -> {
@@ -77,24 +71,24 @@ public interface PersonApi {
 
 
     /**
-     * DELETE /person/{id}
-     * Deleta a Person by ID
+     * DELETE /persons/{id}
+     * Deleta a Person by id
      *
      * @param id  (required)
      * @return Successfully deleted a Person (status code 200)
      */
     @Operation(
-        operationId = "personIdDelete",
-        tags = { "person" },
+        operationId = "personsIdDelete",
+        tags = { "persons" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Successfully deleted a Person")
         }
     )
     @RequestMapping(
         method = RequestMethod.DELETE,
-        value = "/person/{id}"
+        value = "/persons/{id}"
     )
-    default ResponseEntity<Void> personIdDelete(
+    default ResponseEntity<Void> personsIdDelete(
         @Parameter(name = "id", description = "", required = true) @PathVariable("id") Integer id
     ) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
@@ -103,27 +97,27 @@ public interface PersonApi {
 
 
     /**
-     * GET /person/{id}
-     * Get a Person by ID
+     * GET /persons/{id}
+     * Get a Person by PEID
      *
      * @param id  (required)
      * @return Success Response with Path Parameter (status code 200)
      */
     @Operation(
-        operationId = "personIdGet",
-        tags = { "person" },
+        operationId = "personsIdGet",
+        tags = { "persons" },
         responses = {
             @ApiResponse(responseCode = "200", description = "Success Response with Path Parameter", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = PersonsInner.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Person.class))
             })
         }
     )
     @RequestMapping(
         method = RequestMethod.GET,
-        value = "/person/{id}",
+        value = "/persons/{id}",
         produces = { "application/json" }
     )
-    default ResponseEntity<List<PersonsInner>> personIdGet(
+    default ResponseEntity<List<Person>> personsIdGet(
         @Parameter(name = "id", description = "", required = true) @PathVariable("id") Integer id
     ) {
         getRequest().ifPresent(request -> {
@@ -141,27 +135,27 @@ public interface PersonApi {
 
 
     /**
-     * PATCH /person/{id}
-     * Update a Person by ID
+     * PATCH /persons/{id}
+     * Update a Person by PEID
      *
      * @param id  (required)
-     * @return Data for Person with {ID} changed! (status code 200)
+     * @return Data for Person with {PEID} changed! (status code 200)
      */
     @Operation(
-        operationId = "personIdPatch",
-        tags = { "person" },
+        operationId = "personsIdPatch",
+        tags = { "persons" },
         responses = {
-            @ApiResponse(responseCode = "200", description = "Data for Person with {ID} changed!", content = {
+            @ApiResponse(responseCode = "200", description = "Data for Person with {PEID} changed!", content = {
                 @Content(mediaType = "application/json", schema = @Schema(implementation = Person.class))
             })
         }
     )
     @RequestMapping(
         method = RequestMethod.PATCH,
-        value = "/person/{id}",
+        value = "/persons/{id}",
         produces = { "application/json" }
     )
-    default ResponseEntity<Person> personIdPatch(
+    default ResponseEntity<Person> personsIdPatch(
         @Parameter(name = "id", description = "", required = true) @PathVariable("id") Integer id
     ) {
         getRequest().ifPresent(request -> {
@@ -179,25 +173,25 @@ public interface PersonApi {
 
 
     /**
-     * POST /person
+     * POST /persons
      * Add a new Person
      *
      * @param person  (optional)
      * @return Successfully added (status code 201)
      */
     @Operation(
-        operationId = "personPost",
-        tags = { "person" },
+        operationId = "personsPost",
+        tags = { "persons" },
         responses = {
             @ApiResponse(responseCode = "201", description = "Successfully added")
         }
     )
     @RequestMapping(
         method = RequestMethod.POST,
-        value = "/person",
+        value = "/persons",
         consumes = { "application/json" }
     )
-    default ResponseEntity<Void> personPost(
+    default ResponseEntity<Void> personsPost(
         @Parameter(name = "Person", description = "") @Valid @RequestBody(required = false) Person person
     ) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
